update team member

--- a/index.html
+++ b/index.html
@@ -389,14 +389,14 @@
               <!-- Image -->
               <img
                 alt="..."
-                src="https://randomuser.me/api/portraits/women/87.jpg"
+                src="https://media-exp1.licdn.com/dms/image/C4D03AQGpTZPH1Nv4WA/profile-displayphoto-shrink_800_800/0/1645246174584?e=1651708800&v=beta&t=Iv0UhUvN4FugbW-nuA6Lj04uje2v5ajvhC-CCkILtLs"
                 class="shadow-lg rounded-full max-w-full mx-auto"
                 style="max-width: 120px;"
               />
               <div class="pt-6 text-center">
-                <h5 class="text-xl font-bold">Romina Hadid</h5>
+                <h5 class="text-xl font-bold">Lamar Gheljai</h5>
                 <p class="mt-1 text-sm text-gray-500 uppercase font-semibold">
-                  Marketing Specialist
+                  Chief Technical Officer
                 </p>
                 <!-- Social Media Buttons -->
                 <div class="mt-6">
@@ -530,7 +530,7 @@
             </div>
             <!-- Text Box -->
             <h5 class="text-xl mt-5 font-semibold text-white">
-              Excelent Services
+              Excellent Services
             </h5>
             <p class="mt-2 mb-4 text-gray-500">
               Your business payments will settle faster and cheaper than traditional payments rails.
@@ -557,7 +557,7 @@
               <i class="fas fa-lightbulb text-xl"></i>
             </div>
             <!-- Text Box -->
-            <h5 class="text-xl mt-5 font-semibold text-white">Launch time</h5>
+            <h5 class="text-xl mt-5 font-semibold text-white">Instant</h5>
             <p class="mt-2 mb-4 text-gray-500">
               Committed to always deliver borderless payments.
             </p>
